--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,9 +7,16 @@
 
     <!-- TODO: Update blank fragment layout -->
     <com.youth.banner.Banner
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/home_advertisement_banner"
         android:layout_width="match_parent"
         android:layout_height="200dp" />
+    <android.support.design.widget.TabLayout
+        android:id="@+id/home_search_condition_tab"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></android.support.design.widget.TabLayout>
 
 </LinearLayout>
