--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,7 @@
     <com.youth.banner.Banner
         android:id="@+id/home_advertisement_banner"
         android:layout_width="match_parent"
-        android:layout_height="200dp" />
+        android:layout_height="150dp" />
     <android.support.design.widget.TabLayout
         android:id="@+id/home_search_condition_tab"
         android:layout_marginTop="15dp"
@@ -17,6 +17,13 @@
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></android.support.design.widget.TabLayout>
+        android:layout_height="30dp"></android.support.design.widget.TabLayout>
+    <FrameLayout
+        android:id="@+id/home_search_condition_tab_form"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </FrameLayout>
+
+
 
 </LinearLayout>
