--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,9 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              tools:context="com.manre.airappproject.fragment.home.HomeFragment">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    tools:context="com.manre.airappproject.fragment.home.HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <com.youth.banner.Banner
@@ -13,14 +14,18 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/home_search_condition_tab"
         android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_width="match_parent"
+        app:tabIndicatorColor="@color/home_select_back"
         android:layout_height="30dp"></android.support.design.widget.TabLayout>
     <FrameLayout
         android:id="@+id/home_search_condition_tab_form"
-        android:layout_width="match_parent"
+        android:background="@color/home_select_back"
+        android:layout_marginBottom="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
     </FrameLayout>
 
