add search child page and fix bug which is viewPager setting things, viewPager.setOffscreenPageLimit(5); because for my demo have 5 page, so need to setting it to 5, if now the default is 3,

--- a/app/src/main/res/layout/fragment_home_tab_round_trip.xml
+++ b/app/src/main/res/layout/fragment_home_tab_round_trip.xml
@@ -6,27 +6,57 @@
     tools:context="com.manre.airappproject.fragment.home.HomeTabOneWayFragment">
 
 
+    <EditText
+        android:id="@+id/home_search_address_where"
+        android:layout_width="130dp"
+        android:layout_height="35dp"
+        android:layout_marginEnd="26dp"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <EditText
+        android:id="@+id/home_search_address_to"
+        android:layout_width="130dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <Button
         android:id="@+id/button"
         android:layout_width="34dp"
         android:layout_height="34dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/replace_icon"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="176dp"/>
+        app:layout_constraintEnd_toStartOf="@+id/home_search_address_to"
+        app:layout_constraintStart_toEndOf="@+id/home_search_address_where"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <EditText
         android:id="@+id/editText3"
         android:layout_width="130dp"
         android:layout_height="35dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="date"
-        android:singleLine="true"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        tools:layout_editor_absoluteY="67dp"/>
+        app:layout_constraintEnd_toEndOf="@+id/home_search_address_where"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/home_search_address_where"
+        app:layout_constraintTop_toBottomOf="@+id/home_search_address_where" />
 
     <Spinner
         android:id="@+id/spinner"
@@ -41,16 +71,16 @@
 
     <Button
         android:id="@+id/button2"
-        style="@style/Widget.AppCompat.Button"
+        style="@android:style/Widget.Material.Light.Button.Toggle"
         android:layout_width="130dp"
         android:layout_height="35dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="68dp"
         android:text="Button"
-        app:layout_constraintEnd_toEndOf="@+id/editText4"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/editText4"
-        app:layout_constraintTop_toBottomOf="@+id/editText4" />
+        app:layout_constraintEnd_toEndOf="@+id/editText5"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/editText5"
+        app:layout_constraintTop_toBottomOf="@+id/home_search_address_to" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
@@ -60,32 +90,15 @@
         app:layout_constraintGuide_percent="0.5" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/editText5"
         android:layout_width="130dp"
         android:layout_height="35dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="date"
-        app:layout_constraintEnd_toEndOf="@+id/textView2"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
-        tools:layout_editor_absoluteY="67dp"/>
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="130dp"
-        android:layout_height="24dp"
-        android:layout_marginTop="18dp"
-        android:text="TextView"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="36dp"/>
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="130dp"
-        android:layout_height="22dp"
-        android:layout_marginTop="18dp"
-        android:text="TextView"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="218dp"/>
+        app:layout_constraintEnd_toEndOf="@+id/home_search_address_to"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/home_search_address_to"
+        app:layout_constraintTop_toBottomOf="@+id/home_search_address_to" />
 </android.support.constraint.ConstraintLayout>
-
