--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,6 +14,7 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/home_search_condition_tab"
         android:layout_marginTop="15dp"
+        android:elevation="2dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_width="match_parent"
@@ -23,6 +24,7 @@
         android:id="@+id/home_search_condition_tab_form"
         android:background="@color/home_select_back"
         android:layout_marginBottom="15dp"
+        android:elevation="2dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_width="match_parent"
