--- a/app/src/main/res/layout/fragment_home_tab_one_way.xml
+++ b/app/src/main/res/layout/fragment_home_tab_one_way.xml
@@ -7,12 +7,13 @@
 
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/home_search_oneway_from"
         android:layout_width="130dp"
         android:layout_height="35dp"
         android:layout_marginEnd="26dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:background="@drawable/home_tab_search_textview_border"
         android:inputType="textPersonName"
         android:text="Name"
         android:textSize="14sp"
@@ -20,12 +21,13 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/home_search_oneway_to"
         android:layout_width="130dp"
         android:layout_height="35dp"
         android:layout_marginStart="26dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:background="@drawable/home_tab_search_textview_border"
         android:inputType="textPersonName"
         android:text="Name"
         android:textSize="14sp"
@@ -40,8 +42,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/replace_icon"
-        app:layout_constraintEnd_toStartOf="@+id/editText2"
-        app:layout_constraintStart_toEndOf="@+id/editText"
+        app:layout_constraintEnd_toStartOf="@+id/home_search_oneway_to"
+        app:layout_constraintStart_toEndOf="@+id/home_search_oneway_from"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <EditText
@@ -53,10 +55,10 @@
         android:ems="10"
         android:inputType="date"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/editText"
+        app:layout_constraintEnd_toEndOf="@+id/home_search_oneway_from"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/editText"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintStart_toStartOf="@+id/home_search_oneway_from"
+        app:layout_constraintTop_toBottomOf="@+id/home_search_oneway_from" />
 
     <Spinner
         android:id="@+id/spinner"
@@ -76,10 +78,10 @@
         android:layout_height="35dp"
         android:layout_marginTop="64dp"
         android:text="Button"
-        app:layout_constraintEnd_toEndOf="@+id/editText2"
+        app:layout_constraintEnd_toEndOf="@+id/home_search_oneway_to"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/editText2"
-        app:layout_constraintTop_toBottomOf="@+id/editText2"/>
+        app:layout_constraintStart_toStartOf="@+id/home_search_oneway_to"
+        app:layout_constraintTop_toBottomOf="@+id/home_search_oneway_to"/>
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
