--- a/app/src/main/res/layout/fragment_home_tab_round_trip.xml
+++ b/app/src/main/res/layout/fragment_home_tab_round_trip.xml
@@ -13,6 +13,7 @@
         android:layout_marginEnd="26dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:background="@drawable/home_tab_search_textview_border"
         android:inputType="textPersonName"
         android:text="Name"
         android:textSize="14sp"
@@ -28,6 +29,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name"
+        android:background="@drawable/home_tab_search_textview_border"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toTopOf="parent"/>
