--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -31,6 +31,16 @@
         android:layout_height="wrap_content">
     </FrameLayout>
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/home_list_button"
+        android:layout_marginBottom="15dp"
+        android:elevation="2dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </android.support.v7.widget.RecyclerView>
 
 
 </LinearLayout>
