--- a/app/src/main/res/layout/item_fragment_home_easybutton.xml
+++ b/app/src/main/res/layout/item_fragment_home_easybutton.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/GridLayout1"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:rowCount="2"
-    android:columnCount="5"
-    android:orientation="horizontal">
-</GridLayout>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="wrap_content"
+             android:background="@android:color/white"
+             android:layout_height="wrap_content"
+    >
+
+    <ImageView
+        android:id="@+id/easy_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+</FrameLayout>
