--- a/app/src/main/res/layout/item_fragment_home_easybutton.xml
+++ b/app/src/main/res/layout/item_fragment_home_easybutton.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
-             android:background="@android:color/white"
+             android:background="#00ffffff"
              android:layout_height="wrap_content"
     >
 
