--- a/app/src/main/res/layout/item_fragment_home_information_2.xml
+++ b/app/src/main/res/layout/item_fragment_home_information_2.xml
@@ -1,12 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="wrap_content"
-             android:background="#00ffffff"
-             android:layout_height="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:background="#00ffffff"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
     >
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/home_information2_title"/>
     <ImageView
-        android:id="@+id/easy"
-        android:layout_width="wrap_content"
+        android:id="@+id/home_information2_bigiv"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-</FrameLayout>
+       <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <ImageView
+            android:id="@+id/home_information2_smiv1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:columnCount="2">
+            <ImageView
+                android:id="@+id/home_information2_smiv2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+            <ImageView
+                android:id="@+id/home_information2_smiv3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </GridLayout>.
+    </LinearLayout>
+</LinearLayout>
