--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,56 +1,62 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    tools:context="com.manre.airappproject.fragment.home.HomeFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <com.youth.banner.Banner
-        android:id="@+id/home_advertisement_banner"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp" />
-    <android.support.design.widget.TabLayout
-        android:id="@+id/home_search_condition_tab"
-        android:layout_marginTop="15dp"
-        android:elevation="2dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_width="match_parent"
-        app:tabIndicatorColor="@color/home_select_back"
-        android:layout_height="30dp"></android.support.design.widget.TabLayout>
-    <FrameLayout
-        android:id="@+id/home_search_condition_tab_form"
-        android:background="@color/home_select_back"
-        android:layout_marginBottom="15dp"
-        android:elevation="2dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </FrameLayout>
+        android:layout_height="match_parent"
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/home_list_button"
-        android:layout_marginBottom="15dp"
-        android:elevation="2dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:orientation="vertical"
+        tools:context="com.manre.airappproject.fragment.home.HomeFragment">
 
-    </android.support.v7.widget.RecyclerView>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/home_show_case"
-        android:layout_marginBottom="15dp"
-        android:elevation="2dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        <!-- TODO: Update blank fragment layout -->
+        <com.youth.banner.Banner
+            android:id="@+id/home_advertisement_banner"
+            android:layout_width="match_parent"
+            android:layout_height="150dp" />
+        <android.support.design.widget.TabLayout
+            android:id="@+id/home_search_condition_tab"
+            android:layout_marginTop="15dp"
+            android:elevation="2dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_width="match_parent"
+            app:tabIndicatorColor="@color/home_select_back"
+            android:layout_height="30dp"></android.support.design.widget.TabLayout>
+        <FrameLayout
+            android:id="@+id/home_search_condition_tab_form"
+            android:background="@color/home_select_back"
+            android:layout_marginBottom="15dp"
+            android:elevation="2dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </FrameLayout>
 
-    </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/home_list_button"
+            android:layout_marginBottom="15dp"
+            android:elevation="2dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/home_show_case"
+            android:elevation="2dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </android.support.v7.widget.RecyclerView>
 
 
-</LinearLayout>
+    </LinearLayout>
+</android.support.v4.widget.NestedScrollView>
