--- a/app/src/main/res/layout/item_fragment_home_information_1.xml
+++ b/app/src/main/res/layout/item_fragment_home_information_1.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:background="#00ffffff"
+    android:layout_gravity="center"
     android:layout_height="wrap_content"
        android:orientation="vertical"
        >
@@ -20,15 +21,21 @@
            android:columnCount="3">
            <ImageView
                android:id="@+id/home_information1_smiv1"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"/>
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_rowWeight="1"
+               android:layout_columnWeight="1"/>
            <ImageView
                android:id="@+id/home_information1_smiv2"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"/>
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_rowWeight="1"
+               android:layout_columnWeight="1"/>
            <ImageView
                android:id="@+id/home_information1_smiv3"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"/>
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_rowWeight="1"
+               android:layout_columnWeight="1"/>
        </GridLayout>
    </LinearLayout>
