--- a/app/src/main/res/layout/item_fragment_home_information_2.xml
+++ b/app/src/main/res/layout/item_fragment_home_information_2.xml
@@ -19,21 +19,25 @@
         android:orientation="vertical">
         <ImageView
             android:id="@+id/home_information2_smiv1"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <GridLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:columnCount="2">
             <ImageView
                 android:id="@+id/home_information2_smiv2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"/>
             <ImageView
                 android:id="@+id/home_information2_smiv3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"/>
         </GridLayout>.
     </LinearLayout>
 </LinearLayout>
