--- a/app/src/main/res/layout/item_fragment_home_information_1.xml
+++ b/app/src/main/res/layout/item_fragment_home_information_1.xml
@@ -21,19 +21,19 @@
            android:columnCount="3">
            <ImageView
                android:id="@+id/home_information1_smiv1"
-               android:layout_width="wrap_content"
+               android:layout_width="281px"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"/>
            <ImageView
                android:id="@+id/home_information1_smiv2"
-               android:layout_width="wrap_content"
+               android:layout_width="251px"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"/>
            <ImageView
                android:id="@+id/home_information1_smiv3"
-               android:layout_width="wrap_content"
+               android:layout_width="281px"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"/>
