--- a/app/src/main/res/layout/item_fragment_home_information_2.xml
+++ b/app/src/main/res/layout/item_fragment_home_information_2.xml
@@ -30,6 +30,7 @@
                 android:id="@+id/home_information2_smiv2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:scaleType="fitXY"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"/>
             <ImageView
